manifests/rancherdemo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: rancher-app
  template:
    metadata:
      labels:
        name: rancher-app
    spec:
      containers:
        - name: rancher-demo
          image: ronaldo87/rancher-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
          readinessProbe:
            httpGet:
              port: web
              path: /
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 31120
  selector:
    name: rancher-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: rancher-demo-app.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rancher-service
              port:
                number: 8080
